...
              ),
              const SizedBox(height: 16),
              SizedBox(
                width: width - 64,
                height: 55,
                child: ElevatedButton(
                  key: const ValueKey('LogoutButton'),
                  onPressed: () async {
                    await _auth.signOut();

                    Navigator.pushReplacementNamed(
                        context, SignInPage.routeName);
                  },
                  child: const Text(
                    'Ya, Keluar',
                    style: TextStyle(fontSize: 18),
                  ),
                  style: ElevatedButton.styleFrom(
                    primary: secondary,
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(10),
...
