...
        child: DefaultTabController(
          length: 2,
          child: Scaffold(
            appBar: AppBar(
              title: partner
                  ? Text(
                      "Pekerjaan",
                      style: Theme.of(context).textTheme.headline6,
                    )
                  : Text(
                      "Pemesanan",
                      style: Theme.of(context).textTheme.headline6,
                    ),
              centerTitle: true,
              elevation: 0.0,
              backgroundColor: snow,
              bottom: PreferredSize(
...
